def configDir = new File(rootDir, 'config')

buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    }

    dependencies {
        classpath 'me.trnl:clirr-gradle-plugin:0.4'
        classpath 'com.antwerkz.github:github-release-gradle-plugin:1.0.0-RC2'
        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.3'
    }
}

task wrapper(type: Wrapper) {
    gradleVersion = '1.7'
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'eclipse'

    configurations {
        provided
        provided.extendsFrom(compile)
    }
}

configure(subprojects) {
    apply plugin: 'checkstyle'
    apply plugin: 'findbugs'

    group = 'org.mongodb.morphia'
    version = '0.106-SNAPSHOT'

    sourceCompatibility = '1.5'
    targetCompatibility = '1.5'

    configurations {
        provided
    }

    project.archivesBaseName = "morphia-${project.name}"

    repositories {
        mavenCentral()
        mavenLocal()
    }

    dependencies {
        testCompile 'junit:junit:4.11'
        compile 'org.mongodb:mongo-java-driver:[2.10.1,2.11.3]'
    }

    sourceSets.main.compileClasspath += configurations.provided
    sourceSets.test.compileClasspath += configurations.provided

    if (properties['xlint']) {
        tasks.withType(Compile) {
            options.compilerArgs << "-Xlint:unchecked"
        }
    }

    project.ext.buildingWith = { n -> project.hasProperty(n) && project.property(n).toBoolean()
    }

    /* Code quality */
    checkstyle {
        configFile = new File("$configDir/checkstyle.xml")
    }

    findbugs {
        excludeFilter = new File("$configDir/findbugs-exclude.xml")
        sourceSets = [sourceSets.main]
    }

    tasks.withType(FindBugs) {
        reports {
            xml.enabled = project.buildingWith('xmlReports.enabled')
            html.enabled = !project.buildingWith('xmlReports.enabled')
        }
    }

    javadoc {
        options.author = true
        options.version = true
        options.links 'http://docs.oracle.com/javase/7/docs/api/'
    }

    test {
        // set heap size for the test JVM(s)
        minHeapSize = "256m"
        maxHeapSize = "512m"

        // set JVM arguments for the test JVM(s)
        jvmArgs '-XX:MaxPermSize=256m'
    }

}

project(':morphia') {
    archivesBaseName = 'morphia'

    dependencies {
        compile 'cglib:cglib-nodep:[2.1_3,3.0)'
        compile 'com.thoughtworks.proxytoys:proxytoys:1.0'
        compile 'com.google.code.findbugs:findbugs:2.0.2'
    }
}

project(':logging-slf4j') {
    dependencies {
        compile project(':morphia')
        compile 'org.slf4j:slf4j-api:1.5.6'
        testCompile 'org.slf4j:slf4j-simple:1.5.6'
    }
}

project(':validation') {
    dependencies {
        compile 'javax.validation:validation-api:1.0.0.GA'
        testCompile 'org.hibernate:hibernate-validator:4.1.0.Final'
        compile project(':morphia')
        compile project(':logging-slf4j')
        testCompile 'org.slf4j:slf4j-jdk14:1.5.6'
    }
}

project(':entityscanner-plug') {
    dependencies {
        compile('org.reflections:reflections:0.9.8') {
            'servlet-api:javax.servlet'
            'com.google.code.gson:gson'
            'logback-classic:ch.qos.logback'
            'xml-apis:xml-apis'
        }
        compile 'com.google.collections:google-collections:1.0'
        compile('org.scannotation:scannotation:1.0.3') {
            'javassist:javassist'
        }
        compile project(':morphia')
        testCompile 'org.slf4j:slf4j-simple:1.5.6'
    }
}

project(':guice-plug') {
    dependencies {
        compile 'com.google.inject:guice:3.0'
        compile project(':morphia')
    }
}

project(':jrebel-plug') {}

project(':gwt') {
    sourceSets {
        main {
            java { srcDirs = [] }
        }
    }
}

apply from: 'gradle/ide-settings.gradle'
apply from: 'gradle/maven-deployment.gradle'
apply from: 'gradle/osgi-compatibility.gradle'
apply from: 'gradle/release-process.gradle'
